src/tests/krate/publish/snapshots/all__krate__publish__manifest__lib_and_bin_crate-2.snap
---
source: src/tests/krate/publish/manifest.rs
expression: response.json()
---
{
  "version": {
    "audit_actions": [
      {
        "action": "publish",
        "time": "[datetime]",
        "user": {
          "avatar": null,
          "id": "[id]",
          "login": "foo",
          "name": null,
          "url": "https://github.com/foo"
        }
      }
    ],
    "bin_names": [
      "bar",
      "foo"
    ],
    "checksum": "ed125a8d83193391762787872f6363ef11d472fe9e963b984a761f970d63a7a8",
    "crate": "foo",
    "crate_size": 241,
    "created_at": "[datetime]",
    "dl_path": "https://crates.io/api/v1/crates/foo/1.0.0/download",
    "downloads": 0,
    "features": {},
    "has_lib": true,
    "id": "[id]",
    "lib_links": null,
    "license": "MIT",
    "links": {
      "authors": "https://crates.io/api/v1/crates/foo/1.0.0/authors",
      "dependencies": "https://crates.io/api/v1/crates/foo/1.0.0/dependencies",
      "version_downloads": "https://crates.io/api/v1/crates/foo/1.0.0/downloads"
    },
    "num": "1.0.0",
    "published_by": {
      "avatar": null,
      "id": "[id]",
      "login": "foo",
      "name": null,
      "url": "https://github.com/foo"
    },
    "readme_path": "https://crates.io/api/v1/crates/foo/1.0.0/readme",
    "rust_version": null,
    "updated_at": "[datetime]",
    "yanked": false
  }
}
