src/tests/krate/publish/snapshots/all__krate__publish__manifest__lib_and_bin_crate.snap
---
source: src/tests/krate/publish/manifest.rs
expression: response.json()
---
{
  "crate": {
    "badges": null,
    "categories": null,
    "created_at": "[datetime]",
    "description": "description",
    "documentation": null,
    "downloads": 0,
    "exact_match": false,
    "homepage": null,
    "id": "foo",
    "keywords": null,
    "links": {
      "owner_team": "https://crates.io/api/v1/crates/foo/owner_team",
      "owner_user": "https://crates.io/api/v1/crates/foo/owner_user",
      "owners": "https://crates.io/api/v1/crates/foo/owners",
      "reverse_dependencies": "https://crates.io/api/v1/crates/foo/reverse_dependencies",
      "version_downloads": "https://crates.io/api/v1/crates/foo/downloads",
      "versions": "https://crates.io/api/v1/crates/foo/versions"
    },
    "max_stable_version": "1.0.0",
    "max_version": "1.0.0",
    "name": "foo",
    "newest_version": "1.0.0",
    "recent_downloads": null,
    "repository": null,
    "updated_at": "[datetime]",
    "versions": null
  },
  "warnings": {
    "invalid_badges": [],
    "invalid_categories": [],
    "other": []
  }
}
